--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,16 @@
-name: Keep Website Alive
+name: Keep Streamlit App Alive
 
 on:
   schedule:
-    - cron: '*/30 * * * *'  # Every 30 minutes
+    # Runs every 15 minutes
+    - cron: '*/15 * * * *'
+  workflow_dispatch: # allows manual trigger
 
 jobs:
-  ping-website:
+  ping-site:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Ping PaperTradeX website
+      - name: Ping the Streamlit app
         run: |
-          STATUS_CODE=$(curl -s -o /dev/null -w "%{http_code}" -L https://papertardex.streamlit.app)
-          echo "HTTP Status Code: $STATUS_CODE"
-          if [[ "$STATUS_CODE" != "200" ]]; then
-            echo "Warning: Website returned status $STATUS_CODE"
-            exit 1
-          fi
+          curl -I https://papertardex.streamlit.app || exit 1
